--- a/src/app/components/footer/footer.component.css
+++ b/src/app/components/footer/footer.component.css
@@ -3,6 +3,6 @@
     bottom: 0;
     justify-content: center;
     padding: 1rem;
-    color: #FFFFFF;
     background-color: #111111;
+    height: 5%;
 }
