--- a/src/app/components/template/nav/nav.component.html
+++ b/src/app/components/template/nav/nav.component.html
@@ -1,19 +1,17 @@
 <mat-sidenav-container class="container">
-    <mat-sidenav mode="side" opened>
+    <mat-sidenav mode="side" opened class="side">
         <mat-nav-list>
-            <a mat-list-item>
+            <a routerLink="" mat-list-item class="item">
                 <i class="material-icons">home</i>
-                Home
             </a>
             <a mat-list-item>
                 <i class="material-icons">menu_book</i>
-                Categorias
             </a>
         </mat-nav-list>
     </mat-sidenav>
 
     <mat-sidenav-content>
-        rffeweef
+        <router-outlet></router-outlet>
     </mat-sidenav-content>
 
     
