começando o Read de categoria

--- a/src/app/components/template/nav/nav.component.html
+++ b/src/app/components/template/nav/nav.component.html
@@ -4,7 +4,7 @@
             <a routerLink="" mat-list-item class="item">
                 <i class="material-icons">home</i>
             </a>
-            <a mat-list-item>
+            <a routerLink="categorias" mat-list-item>
                 <i class="material-icons">menu_book</i>
             </a>
         </mat-nav-list>
