--- a/src/app/components/views/categoria/categoria-read/categoria-read.component.html
+++ b/src/app/components/views/categoria/categoria-read/categoria-read.component.html
@@ -3,10 +3,7 @@
         <h1>Categorias</h1>
     </div>
 
-    <table mat-table class="mat-elevation-z8 tabela">
-
-        <!--- Note that these columns can be defined in any order.
-              The actual rendered columns are set as a property on the row definition" -->
+    <table mat-table [dataSource]="categorias"  class="mat-elevation-z8 tabela">
       
         <!-- Position Column -->
         <ng-container matColumnDef="id">
@@ -29,7 +26,7 @@
         <!-- Symbol Column -->
         <ng-container matColumnDef="acoes">
           <th mat-header-cell *matHeaderCellDef> AÇÕES</th>
-          <td mat-cell *matCellDef="let row"> {{row.acoes}} </td>
+          <td mat-cell *matCellDef="let row"> </td>
         </ng-container>
       
         <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
