--- a/src/app/components/views/categoria-create/categoria-create.component.html
+++ b/src/app/components/views/categoria-create/categoria-create.component.html
@@ -15,6 +15,6 @@
 
     <div class="buttons">
         <button (click)="create()" class="botao" mat-stroked-button color="primary">CRIAR</button>
-        <button class="botao" mat-stroked-button color="warn">CANCELAR</button>
+        <button (click)="cancel()" class="botao" mat-stroked-button color="warn">CANCELAR</button>
     </div>
 </form>
