--- a/src/app/components/views/categoria/categoria-read/categoria-read.component.html
+++ b/src/app/components/views/categoria/categoria-read/categoria-read.component.html
@@ -35,7 +35,7 @@
         <ng-container matColumnDef="acoes">
           <th mat-header-cell *matHeaderCellDef> AÇÕES </th>
           <td mat-cell *matCellDef="let row"> 
-            <a class="edit" href="#">
+            <a class="edit" href="#" routerLink="update/{{ row.id }}">
               <i class="material-icons">edit</i>
             </a>
             <a class="delete" href="#" routerLink="delete/{{ row.id }}">
