post dos Livros

--- a/src/app/components/views/livro/livro-read-all/livro-read-all.component.html
+++ b/src/app/components/views/livro/livro-read-all/livro-read-all.component.html
@@ -1,44 +1,40 @@
 <div class="content">
     <div class="title">
-        <h1>Categorias</h1>
+        <h1>Livros</h1>
     </div>
 
-    <button (click)="navegarParaCategoriaCreate()" class="botao" mat-stroked-button color="primary">Nova categoria</button>
+    <button  class="botao" mat-stroked-button color="primary">NOVO LIVRO</button>
 
-    <table mat-table [dataSource]="categorias"  class="mat-elevation-z8 tabela">
+    <table mat-table   class="mat-elevation-z8 tabela" [dataSource]="livros">
       
         <ng-container matColumnDef="id">
           <th mat-header-cell *matHeaderCellDef> ID </th>
-          <td mat-cell *matCellDef="let row"> {{row.id}} </td>
+          <td mat-cell *matCellDef="let row"> {{ row.id }} </td>
         </ng-container>
       
-        <ng-container matColumnDef="nome">
-          <th mat-header-cell *matHeaderCellDef> NOME </th>
-          <td mat-cell *matCellDef="let row"> {{row.nome}} </td>
+        <ng-container matColumnDef="titulo">
+          <th mat-header-cell *matHeaderCellDef> TITULO</th>
+          <td mat-cell *matCellDef="let row"> {{ row.titulo }} </td>
         </ng-container>
       
         <ng-container matColumnDef="livros">
-          <th mat-header-cell *matHeaderCellDef> LIVROS </th>
+          <th mat-header-cell *matHeaderCellDef> LER LIVRO </th>
           <td mat-cell *matCellDef="let row"> 
-            <a class="book" routerLink="{{ row.id }}/livros">
+            <a class="book" >
               <i class="material-icons">book</i>              
             </a>
 
           </td>
         </ng-container>
 
-        <ng-container matColumnDef="descricao">
-          <th mat-header-cell *matHeaderCellDef> DESCRIÇÃO </th>
-          <td mat-cell *matCellDef="let row"> {{row.descricao}} </td>
-        </ng-container>
       
         <ng-container matColumnDef="acoes">
           <th mat-header-cell *matHeaderCellDef> AÇÕES </th>
           <td mat-cell *matCellDef="let row"> 
-            <a class="edit" routerLink="update/{{ row.id }}">
+            <a class="edit" href="#">
               <i class="material-icons">edit</i>
             </a>
-            <a class="delete" routerLink="delete/{{ row.id }}">
+            <a class="delete" href="#">
               <i class="material-icons">delete</i>
             </a>
           </td>
