--- a/src/app/components/views/livro/livro-read-all/livro-read-all.component.html
+++ b/src/app/components/views/livro/livro-read-all/livro-read-all.component.html
@@ -3,7 +3,7 @@
         <h1>Livros</h1>
     </div>
 
-    <button  class="botao" mat-stroked-button color="primary">NOVO LIVRO</button>
+    <button  class="botao" mat-stroked-button color="primary" (click)="navegarParaCriarlivro()">NOVO LIVRO</button>
 
     <table mat-table   class="mat-elevation-z8 tabela" [dataSource]="livros">
       
@@ -21,7 +21,7 @@
           <th mat-header-cell *matHeaderCellDef> LER LIVRO </th>
           <td mat-cell *matCellDef="let row"> 
             <a class="book" >
-              <i class="material-icons">book</i>              
+              <i class="material-icons">remove_red_eye</i>              
             </a>
 
           </td>
