--- a/src/app/components/views/livro/livro-update/livro-update.component.html
+++ b/src/app/components/views/livro/livro-update/livro-update.component.html
@@ -6,7 +6,7 @@
     <mat-form-field class="form">
         <mat-label>TITULO</mat-label>   
         <input matInput [(ngModel)]="livro.titulo" [formControl]="titulo" required  type="text" name="titulo" placeholder="Ex. Curso Spring boot" maxlength="100">
-        <mat-error *ngIf="titulo.invalid">{{ getMessageTitulo() }}</mat-error>
+        <mat-error *ngIf="titulo.invalid"></mat-error>
     </mat-form-field>
 
 
@@ -23,7 +23,7 @@
     </mat-form-field> 
 
     <div class="buttons">
-        <button (click)="create()" class="botao" mat-stroked-button color="primary">CRIAR</button>
+        <button (click)="update()" class="botao" mat-stroked-button color="primary">CRIAR</button>
         <button (click)="cancel()"  class="botao" mat-stroked-button color="warn">CANCELAR</button>
     </div>
 </form>
