--- a/src/app/components/views/livro/livro-read-all/livro-read-all.component.html
+++ b/src/app/components/views/livro/livro-read-all/livro-read-all.component.html
@@ -20,7 +20,7 @@
         <ng-container matColumnDef="livros">
           <th mat-header-cell *matHeaderCellDef> LER LIVRO </th>
           <td mat-cell *matCellDef="let row"> 
-            <a class="book" >
+            <a class="book" routerLink="{{ row.id }}/read">
               <i class="material-icons">remove_red_eye</i>              
             </a>
 
